@@ -1,3 +1,29 @@
+.col-md-12 a
+{
+  color: #FFF;
+}
+
+col-md-12 a:hover
+{
+  color: #CCC;
+}
+
+.btn-default {
+	border-color: #777;
+}
+
+.form-control {
+	border: 1px solid #555;
+}
+
+a {
+	color: #135ac7;
+}
+
+a:hover {
+	color: #438ae5;
+}
+
 /**
 
 alert.scss
@@ -217,7 +243,7 @@ a[data-toggle="tooltip"] {
 }
 
 .cv-content h4 {
-	color: #999;
+	color: #666;
 }
 
 .blog-summary {
