@@ -1,3 +1,7 @@
+11-26-2024:
+- Continued improvements to mobile layout.
+- Improved color scheme for light mode for contrast.
+
 11-25-2024:
 - Started improving mobile layout.
 - Fixing sidebar in mobile layout.
